[package]
name = "muffle"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
chumsky = { version = "0.13.0", features = ["pratt"] }
color-eyre = "0.6.5"
inotify = "0.11.2"
parking_lot = "0.12.5"
pipewire = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
