[package]
name = "muffle"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
chumsky = { version = "0.13.0", features = ["pratt"] }
color-eyre = "0.6.5"
directories = "6.0.0"
file-rotate = "0.8.0"
inotify = "0.11.2"
parking_lot = "0.12.5"
pipewire = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
